--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "d3": "^5.15.0",
+    "delaunator": "^4.0.1",
     "parcel": "^1.12.4",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4"
